--- a/src/app/features/dashboards/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/features/dashboards/dashboard-admin/dashboard-admin.component.html
@@ -1,169 +1,170 @@
-<div class="grid">
-  <div class="col-12">
-    <div class="card px-6 py-6">
-      <p-toast></p-toast>
-      <p-toolbar styleClass="mb-4">
-        <ng-template pTemplate="left">
-          <div class="my-2">
-            <button pButton pRipple label="Nouvelle course" icon="pi pi-plus" class="p-button-success mr-2"
-                    (click)="openNew()"></button>
-            <button pButton pRipple label="Supprimer" icon="pi pi-trash" class="p-button-danger"
-                    (click)="deleteSelectedRuns()" [disabled]="!selectedRuns || !selectedRuns.length"></button>
-          </div>
-        </ng-template>
+<!--<div class="grid">-->
+<!--  <div class="col-12">-->
+<!--    <div class="card px-6 py-6">-->
+<!--      <p-toast></p-toast>-->
+<!--      <p-toolbar styleClass="mb-4">-->
+<!--        <ng-template pTemplate="left">-->
+<!--          <div class="my-2">-->
+<!--            <button pButton pRipple label="Nouvelle course" icon="pi pi-plus" class="p-button-success mr-2"-->
+<!--                    (click)="openNew()"></button>-->
+<!--            <button pButton pRipple label="Supprimer" icon="pi pi-trash" class="p-button-danger"-->
+<!--                    (click)="deleteSelectedRuns()" [disabled]="!selectedRuns || !selectedRuns.length"></button>-->
+<!--          </div>-->
+<!--        </ng-template>-->
 
-        <ng-template pTemplate="right">
-          <button pButton pRipple label="Exporter" icon="pi pi-upload" class="p-button-help"
-                  (click)="dt.exportCSV()"></button>
-        </ng-template>
-      </p-toolbar>
+<!--        <ng-template pTemplate="right">-->
+<!--          <button pButton pRipple label="Exporter" icon="pi pi-upload" class="p-button-help"-->
+<!--                  (click)="dt.exportCSV()"></button>-->
+<!--        </ng-template>-->
+<!--      </p-toolbar>-->
 
-      <p-table #dt [value]="runs" [columns]="cols" responsiveLayout="scroll" [rows]="10"
-               [globalFilterFields]="['title','description','location','difficultyLevel']" [paginator]="true"
-               [rowsPerPageOptions]="[10,20,30]" [showCurrentPageReport]="true"
-               currentPageReportTemplate="Affichage de {first} à {last} sur {totalRecords} courses"
-               [(selection)]="selectedRuns" selectionMode="multiple" [rowHover]="true" dataKey="runId">
-        <ng-template pTemplate="caption">
-          <div class="flex flex-column md:flex-row md:justify-content-between md:align-items-center">
-            <h5 class="m-0">Liste des courses</h5>
-            <span class="block mt-2 md:mt-0 p-input-icon-left">
-              <i class="pi pi-search"></i>
-              <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Rechercher..."
-                     class="w-full sm:w-auto"/>
-            </span>
-          </div>
-        </ng-template>
-        <ng-template pTemplate="header">
-          <tr>
-            <th style="width: 3rem">
-              <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
-            </th>
-            <th pSortableColumn="title">Titre
-              <p-sortIcon field="title"></p-sortIcon>
-            </th>
-            <th pSortableColumn="description">Description
-              <p-sortIcon field="description"></p-sortIcon>
-            <th pSortableColumn="date">Date
-              <p-sortIcon field="date"></p-sortIcon>
-            </th>
-            <th pSortableColumn="time">Heure
-              <p-sortIcon field="time"></p-sortIcon>
-            </th>
-            <th pSortableColumn="location">Lieu
-              <p-sortIcon field="location"></p-sortIcon>
-            </th>
-            <th pSortableColumn="difficultyLevel">Niveau de difficulté
-              <p-sortIcon field="difficultyLevel"></p-sortIcon>
-            </th>
-            <th pSortableColumn="distanceKm">Distance (km)
-              <p-sortIcon field="distanceKm"></p-sortIcon>
-            </th>
-            <th pSortableColumn="durationMinutes">Durée (min)
-              <p-sortIcon field="durationMinutes"></p-sortIcon>
-            </th>
-            <th></th>
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-run>
-          <tr>
-            <td>
-              <p-tableCheckbox [value]="run"></p-tableCheckbox>
-            </td>
-            <td><span class="p-column-title">Titre</span>{{ run.title }}</td>
-            <td><span class="p-column-title">Description</span>{{ run.description }}</td>
-            <td><span class="p-column-title">Date</span>{{ run.date | date:'dd/MM/yyyy' }}</td>
-            <td><span class="p-column-title">Heure</span>{{ run.time }}</td>
-            <td><span class="p-column-title">Lieu</span>{{ run.location }}</td>
-            <td><span class="p-column-title">Niveau</span>{{ run.difficultyLevel }}</td>
-            <td><span class="p-column-title">Distance</span>{{ run.distanceKm }}</td>
-            <td><span class="p-column-title">Durée</span>{{ run.durationMinutes }}</td>
-            <td>
-              <div class="flex">
-                <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"
-                        (click)="editRun(run)"></button>
-                <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"
-                        (click)="deleteRun(run)"></button>
-              </div>
-            </td>
-          </tr>
-        </ng-template>
-      </p-table>
+<!--      <p-table #dt [value]="runs" [columns]="cols" responsiveLayout="scroll" [rows]="10"-->
+<!--               [globalFilterFields]="['title','description','location','difficultyLevel']" [paginator]="true"-->
+<!--               [rowsPerPageOptions]="[10,20,30]" [showCurrentPageReport]="true"-->
+<!--               currentPageReportTemplate="Affichage de {first} à {last} sur {totalRecords} courses"-->
+<!--               [(selection)]="selectedRuns" selectionMode="multiple" [rowHover]="true" dataKey="runId">-->
+<!--        <ng-template pTemplate="caption">-->
+<!--          <div class="flex flex-column md:flex-row md:justify-content-between md:align-items-center">-->
+<!--            <h5 class="m-0">Liste des courses</h5>-->
+<!--            <span class="block mt-2 md:mt-0 p-input-icon-left">-->
+<!--              <i class="pi pi-search"></i>-->
+<!--              <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Rechercher..."-->
+<!--                     class="w-full sm:w-auto"/>-->
+<!--            </span>-->
+<!--          </div>-->
+<!--        </ng-template>-->
+<!--        <ng-template pTemplate="header">-->
+<!--          <tr>-->
+<!--            <th style="width: 3rem">-->
+<!--              <p-tableHeaderCheckbox></p-tableHeaderCheckbox>-->
+<!--            </th>-->
+<!--            <th pSortableColumn="title">Titre-->
+<!--              <p-sortIcon field="title"></p-sortIcon>-->
+<!--            </th>-->
+<!--            <th pSortableColumn="description">Description-->
+<!--              <p-sortIcon field="description"></p-sortIcon>-->
+<!--            <th pSortableColumn="date">Date-->
+<!--              <p-sortIcon field="date"></p-sortIcon>-->
+<!--            </th>-->
+<!--            <th pSortableColumn="time">Heure-->
+<!--              <p-sortIcon field="time"></p-sortIcon>-->
+<!--            </th>-->
+<!--            <th pSortableColumn="location">Lieu-->
+<!--              <p-sortIcon field="location"></p-sortIcon>-->
+<!--            </th>-->
+<!--            <th pSortableColumn="difficultyLevel">Niveau de difficulté-->
+<!--              <p-sortIcon field="difficultyLevel"></p-sortIcon>-->
+<!--            </th>-->
+<!--            <th pSortableColumn="distanceKm">Distance (km)-->
+<!--              <p-sortIcon field="distanceKm"></p-sortIcon>-->
+<!--            </th>-->
+<!--            <th pSortableColumn="durationMinutes">Durée (min)-->
+<!--              <p-sortIcon field="durationMinutes"></p-sortIcon>-->
+<!--            </th>-->
+<!--            <th></th>-->
+<!--          </tr>-->
+<!--        </ng-template>-->
+<!--        <ng-template pTemplate="body" let-run>-->
+<!--          <tr>-->
+<!--            <td>-->
+<!--              <p-tableCheckbox [value]="run"></p-tableCheckbox>-->
+<!--            </td>-->
+<!--            <td><span class="p-column-title">Titre</span>{{ run.title }}</td>-->
+<!--            <td><span class="p-column-title">Description</span>{{ run.description }}</td>-->
+<!--            <td><span class="p-column-title">Date</span>{{ run.date | date:'dd/MM/yyyy' }}</td>-->
+<!--            <td><span class="p-column-title">Heure</span>{{ run.time }}</td>-->
+<!--            <td><span class="p-column-title">Lieu</span>{{ run.location }}</td>-->
+<!--            <td><span class="p-column-title">Niveau</span>{{ run.difficultyLevel }}</td>-->
+<!--            <td><span class="p-column-title">Distance</span>{{ run.distanceKm }}</td>-->
+<!--            <td><span class="p-column-title">Durée</span>{{ run.durationMinutes }}</td>-->
+<!--            <td>-->
+<!--              <div class="flex">-->
+<!--                <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"-->
+<!--                        (click)="editRun(run)"></button>-->
+<!--                <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"-->
+<!--                        (click)="deleteRun(run)"></button>-->
+<!--              </div>-->
+<!--            </td>-->
+<!--          </tr>-->
+<!--        </ng-template>-->
+<!--      </p-table>-->
 
-      <p-dialog [(visible)]="runDialog" [style]="{width: '450px'}" header="Détails de la course" [modal]="true"
-                class="p-fluid">
-        <ng-template pTemplate="content">
-          <div class="field">
-            <label for="title">Titre</label>
-            <input type="text" pInputText id="title" [(ngModel)]="run.title" required autofocus
-                   [ngClass]="{'ng-invalid ng-dirty' : submitted && !run.title}"/>
-            <small class="ng-dirty ng-invalid" *ngIf="submitted && !run.title">Le titre est requis.</small>
-          </div>
-          <div class="field">
-            <label for="description">Description</label>
-            <textarea id="description" pInputTextarea [(ngModel)]="run.description" required rows="3"
-                      cols="20"></textarea>
-            <small class="ng-dirty ng-invalid" *ngIf="submitted && !run.description">La description est requise.</small>
-          </div>
-          <div class="field">
-            <label for="date">Date</label>
-            <p-calendar [(ngModel)]="run.date" id="date" dateFormat="dd/mm/yy"></p-calendar>
-          </div>
-          <div class="field">
-            <label for="time">Heure</label>
-            <p-inputMask [(ngModel)]="run.time" id="time" mask="99:99"></p-inputMask>
-          </div>
-          <div class="field">
-            <label for="location">Lieu</label>
-            <input type="text" pInputText id="location" [(ngModel)]="run.location" required/>
-          </div>
-          <div class="field">
-            <label for="difficultyLevel">Niveau de difficulté</label>
-            <p-dropdown [(ngModel)]="run.difficultyLevel" id="difficultyLevel" [options]="difficultyLevels"
-                        placeholder="Sélectionnez un niveau"></p-dropdown>
-          </div>
-          <div class="field">
-            <label for="distanceKm">Distance (km)</label>
-            <p-inputNumber [(ngModel)]="run.distanceKm" id="distanceKm" [min]="0"></p-inputNumber>
-          </div>
-          <div class="field">
-            <label for="durationMinutes">Durée (min)</label>
-            <p-inputNumber [(ngModel)]="run.durationMinutes" id="durationMinutes" [min]="0"></p-inputNumber>
-          </div>
-        </ng-template>
+<!--      <p-dialog [(visible)]="runDialog" [style]="{width: '450px'}" header="Détails de la course" [modal]="true"-->
+<!--                class="p-fluid">-->
+<!--        <ng-template pTemplate="content">-->
+<!--          <div class="field">-->
+<!--            <label for="title">Titre</label>-->
+<!--            <input type="text" pInputText id="title" [(ngModel)]="run.title" required autofocus-->
+<!--                   [ngClass]="{'ng-invalid ng-dirty' : submitted && !run.title}"/>-->
+<!--            <small class="ng-dirty ng-invalid" *ngIf="submitted && !run.title">Le titre est requis.</small>-->
+<!--          </div>-->
+<!--          <div class="field">-->
+<!--            <label for="description">Description</label>-->
+<!--            <textarea id="description" pInputTextarea [(ngModel)]="run.description" required rows="3"-->
+<!--                      cols="20"></textarea>-->
+<!--            <small class="ng-dirty ng-invalid" *ngIf="submitted && !run.description">La description est requise.</small>-->
+<!--          </div>-->
+<!--          <div class="field">-->
+<!--            <label for="date">Date</label>-->
+<!--            <p-calendar [(ngModel)]="run.date" id="date" dateFormat="dd/mm/yy"></p-calendar>-->
+<!--          </div>-->
+<!--          <div class="field">-->
+<!--            <label for="time">Heure</label>-->
+<!--            <p-inputMask [(ngModel)]="run.time" id="time" mask="99:99"></p-inputMask>-->
+<!--          </div>-->
+<!--          <div class="field">-->
+<!--            <label for="location">Lieu</label>-->
+<!--            <input type="text" pInputText id="location" [(ngModel)]="run.location" required/>-->
+<!--          </div>-->
+<!--          <div class="field">-->
+<!--            <label for="difficultyLevel">Niveau de difficulté</label>-->
+<!--            <p-dropdown [(ngModel)]="run.difficultyLevel" id="difficultyLevel" [options]="difficultyLevels"-->
+<!--                        placeholder="Sélectionnez un niveau"></p-dropdown>-->
+<!--          </div>-->
+<!--          <div class="field">-->
+<!--            <label for="distanceKm">Distance (km)</label>-->
+<!--            <p-inputNumber [(ngModel)]="run.distanceKm" id="distanceKm" [min]="0"></p-inputNumber>-->
+<!--          </div>-->
+<!--          <div class="field">-->
+<!--            <label for="durationMinutes">Durée (min)</label>-->
+<!--            <p-inputNumber [(ngModel)]="run.durationMinutes" id="durationMinutes" [min]="0"></p-inputNumber>-->
+<!--          </div>-->
+<!--        </ng-template>-->
 
-        <ng-template pTemplate="footer">
-          <button pButton pRipple label="Annuler" icon="pi pi-times" class="p-button-text"
-                  (click)="hideDialog()"></button>
-          <button pButton pRipple label="Sauvegarder" icon="pi pi-check" class="p-button-text"
-                  (click)="saveRun()"></button>
-        </ng-template>
-      </p-dialog>
+<!--        <ng-template pTemplate="footer">-->
+<!--          <button pButton pRipple label="Annuler" icon="pi pi-times" class="p-button-text"-->
+<!--                  (click)="hideDialog()"></button>-->
+<!--          <button pButton pRipple label="Sauvegarder" icon="pi pi-check" class="p-button-text"-->
+<!--                  (click)="saveRun()"></button>-->
+<!--        </ng-template>-->
+<!--      </p-dialog>-->
 
-      <p-dialog [(visible)]="deleteRunDialog" header="Confirmation" [modal]="true" [style]="{width:'450px'}">
-        <div class="flex align-items-center justify-content-center">
-          <i class="pi pi-exclamation-triangle mr-3" style="font-size: 2rem"></i>
-          <span *ngIf="run">Êtes-vous sûr(e) de vouloir supprimer <b>{{ run.title }}</b> ?</span>
-        </div>
-        <ng-template pTemplate="footer">
-          <button pButton pRipple icon="pi pi-times" class="p-button-text" label="Non"
-                  (click)="deleteRunDialog = false"></button>
-          <button pButton pRipple icon="pi pi-check" class="p-button-text" label="Oui"
-                  (click)="confirmDelete()"></button>
-        </ng-template>
-      </p-dialog>
+<!--      <p-dialog [(visible)]="deleteRunDialog" header="Confirmation" [modal]="true" [style]="{width:'450px'}">-->
+<!--        <div class="flex align-items-center justify-content-center">-->
+<!--          <i class="pi pi-exclamation-triangle mr-3" style="font-size: 2rem"></i>-->
+<!--          <span *ngIf="run">Êtes-vous sûr(e) de vouloir supprimer <b>{{ run.title }}</b> ?</span>-->
+<!--        </div>-->
+<!--        <ng-template pTemplate="footer">-->
+<!--          <button pButton pRipple icon="pi pi-times" class="p-button-text" label="Non"-->
+<!--                  (click)="deleteRunDialog = false"></button>-->
+<!--          <button pButton pRipple icon="pi pi-check" class="p-button-text" label="Oui"-->
+<!--                  (click)="confirmDelete()"></button>-->
+<!--        </ng-template>-->
+<!--      </p-dialog>-->
 
-      <p-dialog [(visible)]="deleteRunsDialog" header="Confirmation" [modal]="true" [style]="{width:'450px'}">
-        <div class="flex align-items-center justify-content-center">
-          <i class="pi pi-exclamation-triangle mr-3" style="font-size: 2rem"></i>
-          <span>Êtes-vous sûr(e) de vouloir supprimer les courses sélectionnées ?</span>
-        </div>
-        <ng-template pTemplate="footer">
-          <button pButton pRipple icon="pi pi-times" class="p-button-text" label="Non"
-                  (click)="deleteRunsDialog = false"></button>
-          <button pButton pRipple icon="pi pi-check" class="p-button-text" label="Oui"
-                  (click)="confirmDeleteSelected()"></button>
-        </ng-template>
-      </p-dialog>
-    </div>
-  </div>
-</div>
+<!--      <p-dialog [(visible)]="deleteRunsDialog" header="Confirmation" [modal]="true" [style]="{width:'450px'}">-->
+<!--        <div class="flex align-items-center justify-content-center">-->
+<!--          <i class="pi pi-exclamation-triangle mr-3" style="font-size: 2rem"></i>-->
+<!--          <span>Êtes-vous sûr(e) de vouloir supprimer les courses sélectionnées ?</span>-->
+<!--        </div>-->
+<!--        <ng-template pTemplate="footer">-->
+<!--          <button pButton pRipple icon="pi pi-times" class="p-button-text" label="Non"-->
+<!--                  (click)="deleteRunsDialog = false"></button>-->
+<!--          <button pButton pRipple icon="pi pi-check" class="p-button-text" label="Oui"-->
+<!--                  (click)="confirmDeleteSelected()"></button>-->
+<!--        </ng-template>-->
+<!--      </p-dialog>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+<router-outlet></router-outlet>
