--- a/src/app/features/auth/login/login/login.component.html
+++ b/src/app/features/auth/login/login/login.component.html
@@ -1,5 +1,5 @@
+<!-- login.component.html -->
 <div class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden">
-
   <div class="flex flex-column align-items-center justify-content-center">
     <img
       src="assets/layout/images/{{layoutService.config().colorScheme === 'light' ? 'logoA2-dark' : 'logoA2-white'}}.png"
@@ -8,8 +8,7 @@
       style="border-radius:56px; padding:0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%);">
       <div class="w-full surface-card py-8 px-5 sm:px-8" style="border-radius:53px">
         <button pButton pRipple type="button" icon="pi pi-arrow-left" class="p-button-rounded"
-                style="margin-bottom: 5rem"
-                label="Retour" routerLink="/"></button>
+                style="margin-bottom: 5rem" label="Retour" routerLink="/"></button>
         <div class="text-center mb-5">
           <img src="assets/layout/images/avatar.png" alt="Image" style="height: 70px; border-radius:50%" class="mb-3">
           <div class="text-900 text-3xl font-medium mb-3">Rejoignez la course</div>
@@ -18,14 +17,12 @@
 
         <div>
           <label for="email1" class="block text-900 text-xl font-medium mb-2">Adresse e-mail</label>
-          <input id="email1" type="text" placeholder="Entrez votre adresse e-mail" pInputText
-                 class="w-full md:w-30rem mb-5"
-                 style="padding:1rem">
+          <input id="email1" [(ngModel)]="email" type="text" placeholder="Entrez votre adresse e-mail" pInputText
+                 class="w-full md:w-30rem mb-5" style="padding:1rem">
 
           <label for="password1" class="block text-900 font-medium text-xl mb-2">Mot de passe</label>
           <p-password id="password1" [(ngModel)]="password" placeholder="Entrez votre mot de passe" [toggleMask]="true"
-                      styleClass="mb-5"
-                      inputStyleClass="w-full p-3 md:w-30rem"></p-password>
+                      styleClass="mb-5" inputStyleClass="w-full p-3 md:w-30rem"></p-password>
 
           <div class="flex align-items-center justify-content-between mb-5 gap-5">
             <div class="flex align-items-center">
@@ -33,11 +30,14 @@
               <label for="rememberme1">Se souvenir de moi</label>
             </div>
             <a class="font-medium no-underline ml-2 text-right cursor-pointer" style="color: var(--primary-color)">Mot
-              de passe oublié ?</a>
+              de
+              passe oublié ?</a>
           </div>
-          <button pButton pRipple label="Se connecter" class="w-full p-3 text-xl" [routerLink]="['/']"></button>
+          <button pButton pRipple label="Se connecter" class="w-full p-3 text-xl" (click)="onLogin()"></button>
+          <div *ngIf="errorMessage" class="text-red-600 mt-2">{{ errorMessage }}</div>
         </div>
-        <a class="font-medium no-underline cursor-pointer" style="color: var(--primary-color);" routerLink="/register">Pas encore inscrit ?</a>
+        <a class="font-medium no-underline cursor-pointer" style="color: var(--primary-color);" routerLink="/register">Pas
+          encore inscrit ?</a>
       </div>
     </div>
   </div>
